# deep-learning-project-template

./: .gitignore  HOWTO.md  MANIFEST.in  README.md  hubconf.py  requirements.txt  setup.cfg  setup.py  slurm.sh  train.py
.github/: stale.yml
.github/workflows/: ci-testing.yml  code-format.yml  docs-check.yml  install-pkg.yml
config/: config.yaml
docs/source/: conf.py  index.rst
docs/source/_templates/: theme_variables.jinja
lightning_modules/: mnist.py
project/: __init__.py  lit_autoencoder.py  lit_classifier_main.py  lit_image_classifier.py  lit_mnist.py  train.py
research_mnist/: README.md  mnist_data_module.py  mnist_trainer.py  simplest_mnist.py
research_seed/baselines/mnist_baseline/: README.md  mnist_baseline.py
research_seed/mnist/: README.md  mnist.py  mnist_trainer.py
src/: README.md  mnist_classifier.py  simplest_mnist.py
src/baselines/: README.md
src/baselines/mnist_baseline/: mnist_baseline.py
src/production_mnist/: README.md  mnist.py  mnist_trainer.py
src/research_mnist/: mnist.py  mnist_data_module.py  mnist_trainer.py
src/single_file_mnist/: README.md  mnist.py
tests/: test_classifier.py  test_scripts.py
